org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/Conditional/001_ConditionalTest01.kmt
using kermeta::standard

package test {
	class Main
	{ 
		operation main(str : kermeta::standard::String) : kermeta::standard::Void is do 

			
			var test : Boolean init true
			if (test)
			then
			end
			

			
		end
		
		
	}
	
}