org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Conditional/Conditional_condition_must_be_boolean/002_ConditionalTest01.kmt
using kermeta::standard

package helloworld {
	class HeloWorld 
	{ 
		@main ""
		operation main(str : kermeta::standard::String) : kermeta::standard::Void is do 
			kermeta::io::StdIO.writeln("Hello World, everybody!")
			//Generic type does not work
			//var c : Collection<kermeta::standard::Integer>
			//var c : Collection
			//c.add(1)
			//c.add(2)
			//c.add(3)
			//c.each{e | kermeta::io::StdIO.writeln(e)}
			
			var test : A init true
			
			if (test)
			then
			end
			

			
		end
		
		
	}
	
	class A {
	}
	
}